# orbit_sim

./: .gitignore  CMakeLists.txt  README.md
include/: CelestialBody.h  PhysicsObject.h  Vector2.h
src/: CelestialBody.cpp  PhysicsObject.cpp  Vector2.cpp  main.cpp
